--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
   "name": "react-querybuilder",
   "version": "1.4.3",
-  "description":
-    "The React <QueryBuilder /> component for constructing queries",
+  "description": "The React <QueryBuilder /> component for constructing queries",
   "main": "dist/index.js",
   "types": "./index.d.ts",
   "repository": {
     "type": "git",
     "url": "https://github.com/sapientglobalmarkets/react-querybuilder"
   },
-  "keywords": ["react", "query", "builder", "operators", "ui", "component"],
-  "author":
-    "Pavan Podila <pavan@pixelingene.com> (http://blog.pixelingene.com)",
+  "keywords": [
+    "react",
+    "query",
+    "builder",
+    "operators",
+    "ui",
+    "component"
+  ],
+  "author": "Pavan Podila <pavan@pixelingene.com> (http://blog.pixelingene.com)",
   "license": "MIT",
   "homepage": "https://github.com/sapientglobalmarkets/react-querybuilder",
   "devDependencies": {
@@ -42,7 +47,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.6",
     "mocha": "^4.0.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.11.2",
     "phantomjs-prebuilt": "^2.1.16",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.9",
@@ -67,9 +72,8 @@
     "publish:demo": "npm run dist && node gh-pages.publish.js",
     "test": "karma start karma.conf.js",
     "test:watch": "npm test -- --no-single-run --auto-watch",
-    "codecov":
-      "cat coverage/*/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js",
-    "generate-changelog":
-      "node node_modules/github-changes -o sapientglobalmarkets -r react-querybuilder -a --use-commit-body --only-pulls --date-format=\"(YYYY/MM/DD)\""
-  }
+    "codecov": "cat coverage/*/lcov.info | ./node_modules/codecov.io/bin/codecov.io.js",
+    "generate-changelog": "node node_modules/github-changes -o sapientglobalmarkets -r react-querybuilder -a --use-commit-body --only-pulls --date-format=\"(YYYY/MM/DD)\""
+  },
+  "packageManager": "yarn@3.2.1"
 }
