--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ node_modules
 *.log
 .tmp
 coverage
+# for yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
